--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <!--a tag "a" é uma âncora para podermos linkar outras paginas da web-->
             <div class="apresentacao__conteudo__links"> 
                 <h2 class="apresentacao__conteudo__links__titulo">Acesse as redes do Gatinho:</h2>
-                <a class="apresentacao__conteudo__links__link" href="www.linkedin.com/in/miguel-macedo-dev">
+                <a class="apresentacao__conteudo__links__link" href="https://linkedin.com/in/miguel-macedo-dev">
                     <img src="./Assets/linkedin.png">LinkedIn</a>
                 <a class="apresentacao__conteudo__links__link" href="https://github.com/miguelpaullo">
                     <img src="./Assets/github.png">GitHub</a>
